Added a navbar and a landing image to the website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Ares Garage</title>
 </head>
 <body>
-    <h1 class="headie_one">Ares Garage</h1>
+    <!--Nav bar code-->
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a class="redirect" href="#home">Ares Garage</a>
+      </div>
+    <!--<h1 class="headie_one">Ares Garage</h1>-->
+    <!--adding landing image-->
+    <img src="/images/todd-kent-onnJOfF-okU-unsplash.jpg" alt="garage image">
 </body>
 </html>
