Added margin to image element and added a background color

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
       </div>
     <!--<h1 class="headie_one">Ares Garage</h1>-->
     <!--adding landing image-->
+    <div class="land">
     <img src="/images/todd-kent-onnJOfF-okU-unsplash.jpg" alt="garage image">
+    </div>
+</p>
+    <div class="intro">
+        <p>
+        Lorem ipsum dolor sit amet consectetur
+         adipisicing elit. Quia, esse recusandae neque, architecto 
+         possimus doloribus tempore nam numquam dignissimos alias illo 
+        aspernatur libero incidunt in dolor tempora deserunt ex ullam?
+        </p>
+    </div>
 </body>
 </html>
