Working on spare section

--- a/index.html
+++ b/index.html
@@ -48,5 +48,25 @@
         title="YouTube video player" frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+    <div class=tab_a>
+        <h2>Spare Available For Sale!!</h2>
+        <table>
+            <tr>
+              <th>Spare</th>
+              <th>Description</th>
+              <th>Price</th>
+            </tr>
+            <tr>
+              <td>Tires</td>
+              <td>Off road 4wd tires</td>
+              <td>200000ugx</td>
+            </tr>
+            <tr>
+              <td>Headlights</td>
+              <td>All Saloon car head lamps available</td>
+              <td>90000-300000ugx</td>
+            </tr>
+          </table>
+        </div>
 </body>
 </html>
